Uploaded image for project: 'Geode'
  1. Geode
  2. GEODE-8929

Existing log files not counted in disk space calculations

    XMLWordPrintableJSON

Details

    Description

      When the native logger starts up, it looks for existing "rolled" log files, i.e. files which were written by a previous instance of the client.  If it finds any, they are added to an internal map, and when the current log file would exceed the file size limit, the oldest existing rolled log file is deleted, and a new one written.  The size of the existing files, however, is not calculated and subtracted from available size at startup, so each concurrent instance of the client can add up to whatever is specified for `log-disk-space-limit`.  So, for instance, if you set a disk space limit of 5MB, run your app, generate 5MB of logs, and quit, you have 5MB of logs.  If you run your app again, generate 5MB of logs, and quit, you now have 10MB of logs, etc., effectively "leaking" disk space.

       

      The workaround for now is to always delete existing log files at app startup, but we should really either delete these when initializing the logger, or calculate the existing used disk space at startup.

       

      Attachments

        Issue Links

          Activity

            People

              Unassigned Unassigned
              bbender Blake Bender
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: