GEODE-8929: Stop leaking disk space between logger runs - Logger wasn't calculating the size of existing files when   initializing.  Thus the disk usage could grow by up to the space limit   set by the app at each iteration (run). - Added new test to start/stop logger several times and verify we're   never exceeding disk space limits in toto.